crates/ra_ide_api/src/completion/snapshots/completion_item__completes_trait_fn.snap
---
created: "2019-03-27T19:56:32.722488483Z"
creator: insta@0.7.4
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "foo",
        source_range: [108; 108),
        delete: [108; 108),
        insert: "foo"
    }
]
