crates/ra_ide_api/src/completion/snapshots/completion_item__deeply_nested_use_tree.snap
---
created: "2019-01-25T20:32:41.085195800+00:00"
creator: insta@0.5.2
expression: kind_completions
source: crates/ra_ide_api/src/completion/completion_item.rs
---
[
    CompletionItem {
        completion_kind: Reference,
        label: "Spam",
        kind: Some(
            Struct
        ),
        detail: Some(
            "struct"
        ),
        documentation: None,
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [23; 25),
        text_edit: None
    }
]
