crates/ra_ide_api/src/completion/snapshots/completion_item__dont_complete_trait_fn_inside_fn.snap
---
created: "2019-04-03T16:07:48.333822109Z"
creator: insta@0.7.4
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Self",
        source_range: [165; 165),
        delete: [165; 165),
        insert: "Self",
        kind: TypeParam
    },
    CompletionItem {
        label: "T",
        source_range: [165; 165),
        delete: [165; 165),
        insert: "T",
        kind: Trait
    }
]
