crates/ra_ide_api/src/completion/snapshots/completion_item__mod_with_docs.snap
---
created: "2019-01-25T20:32:41.088188900+00:00"
creator: insta@0.5.2
expression: kind_completions
source: crates/ra_ide_api/src/completion/completion_item.rs
---
[
    CompletionItem {
        completion_kind: Reference,
        label: "my",
        kind: Some(
            Module
        ),
        detail: Some(
            "mod"
        ),
        documentation: Some(
            Documentation(
                "Some simple\ndocs describing `mod my`."
            )
        ),
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [23; 25),
        text_edit: None
    }
]
