crates/ra_ide_api/src/completion/snapshots/completion_item__module_items.snap
---
created: "2019-01-25T20:32:41.100156700+00:00"
creator: insta@0.5.2
expression: kind_completions
source: crates/ra_ide_api/src/completion/completion_item.rs
---
[
    CompletionItem {
        completion_kind: Reference,
        label: "quux",
        kind: Some(
            Function
        ),
        detail: Some(
            "fn quux()"
        ),
        documentation: None,
        lookup: None,
        insert_text: Some(
            "quux()$0"
        ),
        insert_text_format: Snippet,
        source_range: [89; 89),
        text_edit: None
    },
    CompletionItem {
        completion_kind: Reference,
        label: "Foo",
        kind: Some(
            Struct
        ),
        detail: Some(
            "struct"
        ),
        documentation: None,
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [89; 89),
        text_edit: None
    },
    CompletionItem {
        completion_kind: Reference,
        label: "Baz",
        kind: Some(
            Enum
        ),
        detail: Some(
            "enum"
        ),
        documentation: None,
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [89; 89),
        text_edit: None
    }
]
