crates/ra_ide_api/src/completion/snapshots/completion_item__reference_completion.snap
---
created: "2019-01-22T14:45:00.717917+00:00"
creator: insta@0.4.0
expression: kind_completions
source: "crates\\ra_ide_api\\src\\completion\\completion_item.rs"
---
[
    CompletionItem {
        completion_kind: Reference,
        label: "Bar",
        kind: Some(
            EnumVariant
        ),
        detail: None,
        documentation: None,
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [47; 47),
        text_edit: None
    },
    CompletionItem {
        completion_kind: Reference,
        label: "Foo",
        kind: Some(
            EnumVariant
        ),
        detail: None,
        documentation: None,
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [47; 47),
        text_edit: None
    }
]
